--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 server:
   port: 80
+  servlet:
+    session:
+      timeout: 60m
+      cookie:
+        name: user-session
+        max-age: 60m
 spring:
   application:
     #应用的名称，可选
